# gst-imgspot

./: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.in  NEWS  README  README.videomixer  aclocal.m4  autogen.sh  config.h  config.status  configure  configure.ac  dependencies  libtool
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
data/: surf.res
m4/: Makefile  Makefile.in
scripts/: addsource.js  alphasource.js  autodetect.sh  deletesource.js  detectsource.js  hidesource.js  icestreamoutput.js  loadsource.js  movesource.js  recordoutput.js  resizesource.js  rtsp.urls  seek.js  setstate.js  showsource.js  streamoutput.js  v4l2feed.py  v4l2feed.rb  videofeed.py  videofeed.rb  videomixer.py  videoswitch.js  videoswitch.py  zordersource.js
src/: Makefile  Makefile.am  Makefile.in  audio-enumtypes.c  audio.c  blend.c  blend.h  gst-i18n-plugin.h  gstbaseaudiosrc.c  gstcollectpads2.c  gstimgspot.c  gstimgspot.h  gstkfilesrc.c  gstkfilesrc.h  gstrtsp.c  gstrtspsrc.c  gstvideoscaledmixer.c  gstvideoscaledmixer.h  libgstaudio.la  libgstaudio_la-audio-enumtypes.lo  libgstaudio_la-audio.lo  libgstaudio_la-gstaudioclock.lo  libgstaudio_la-gstaudiofilter.lo  libgstaudio_la-gstaudiosink.lo  libgstaudio_la-gstaudiosrc.lo  libgstaudio_la-gstbaseaudiosink.lo  libgstaudio_la-gstbaseaudiosrc.lo  libgstaudio_la-gstringbuffer.lo  libgstaudio_la-mixerutils.lo  libgstaudio_la-multichannel.lo  libgstfilesrc.la  libgstfilesrc_la-gstfilesrc.lo  libgstimgspot.la  libgstimgspot_la-gstimgspot.lo  libgstkfilesrc.la  libgstkfilesrc_la-gstkfilesrc.lo  libgstrtsp.la  libgstrtsp_la-gstrtpdec.lo  libgstrtsp_la-gstrtsp.lo  libgstrtsp_la-gstrtspext.lo  (+7 more)
src/.deps/: libgstaudio_la-audio-enumtypes.Plo  libgstaudio_la-audio.Plo  libgstaudio_la-gstaudioclock.Plo  libgstaudio_la-gstaudiofilter.Plo  libgstaudio_la-gstaudiosink.Plo  libgstaudio_la-gstaudiosrc.Plo  libgstaudio_la-gstbaseaudiosink.Plo  libgstaudio_la-gstbaseaudiosrc.Plo  libgstaudio_la-gstringbuffer.Plo  libgstaudio_la-mixerutils.Plo  libgstaudio_la-multichannel.Plo  libgstfilesrc_la-gstfilesrc.Plo  libgstimgspot_la-gstimgspot.Plo  libgstkfilesrc_la-gstkfilesrc.Plo  libgstrtsp_la-gstrtpdec.Plo  libgstrtsp_la-gstrtsp.Plo  libgstrtsp_la-gstrtspext.Plo  libgstrtsp_la-gstrtspsrc.Plo  libgstvideoscaledmixer_la-blend.Plo  libgstvideoscaledmixer_la-blendorc.Plo  libgstvideoscaledmixer_la-gstcollectpads2.Plo  libgstvideoscaledmixer_la-gstvideoscaledmixer.Plo
src/.libs/: libgstaudio.exp  libgstaudio.la  libgstaudio.lai  libgstaudio.ver  libgstfilesrc.exp  libgstfilesrc.la  libgstfilesrc.lai  libgstfilesrc.ver  libgstimgspot.exp  libgstimgspot.la  libgstimgspot.lai  libgstimgspot.ver  libgstkfilesrc.exp  libgstkfilesrc.la  libgstkfilesrc.lai  libgstkfilesrc.ver  libgstrtsp.exp  libgstrtsp.lai  libgstrtsp.ver  libgstvideoscaledmixer.exp  libgstvideoscaledmixer.la  libgstvideoscaledmixer.lai  libgstvideoscaledmixer.ver
